--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import BaseLayout from "~/layout/base-layout.astro";
+import UiTest from "~/components/ui-test";
 ---
 
 <BaseLayout>
   <div class="min-h-[calc(100svh-var(--header-height)-4px)]">
     <h1>Hello</h1>
+    <UiTest client:only="solid-js" />
   </div></BaseLayout
 >
