--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -8,12 +8,12 @@ import ThemeToggle from "./theme-toggle";
 <header class="sticky top-0 z-50 w-full border-b-4 bg-background">
   <div class="flex h-(--header-height) items-center justify-between px-4">
     <div>
-      <div class="invisible hidden lg:visible lg:block">
+      <!-- <div class="invisible hidden lg:visible lg:block">
         <DesktopNav client:load navGroups={nav} />
-      </div>
-      <div class="lg:invisible lg:hidden">
-        <MobileNav client:load navGroups={nav} />
-      </div>
+      </div> -->
+      <!-- <div class="lg:invisible lg:hidden"> -->
+      <MobileNav client:load navGroups={nav} />
+      <!-- </div> -->
     </div>
     <div>
       <ThemeToggle client:load />
