Fix style issues

--- a/src/components/docs/preview-tabs.astro
+++ b/src/components/docs/preview-tabs.astro
@@ -24,10 +24,10 @@ const { demoCode, class: className } = Astro.props;
       >
     </div>
     <div
-      class="-z-50 mt-2! h-[450px] rounded-base border-2 border-border bg-code-background shadow-shadow"
+      class="-z-50 mt-2! grid min-h-[450px] place-content-center rounded-base border-2 border-border bg-code-background shadow-shadow"
     >
       <div
-        class="preview-content invisible mx-auto hidden h-full p-8 ui-selected:visible ui-selected:block"
+        class="preview-content invisible mx-auto hidden h-full min-h-[450px] p-8 ui-selected:visible ui-selected:block"
         data-selected
       >
         <div class="flex h-full items-center justify-center">
