Doc sidebar and ToC

--- a/src/components/docs/sidebar.astro
+++ b/src/components/docs/sidebar.astro
@@ -1,3 +1,31 @@
 ---
+import { Button } from "~/components/ui/button";
 import { nav } from "~/lib/nav";
+
+const pathname = Astro.url.pathname;
 ---
+
+<aside
+  class="invisible sticky top-[calc(var(--header-height)+4px)] z-30 no-scrollbar hidden h-[calc(100svh-var(--header-height)-2rem)] w-80 overflow-y-scroll bg-transparent px-4 pt-8 lg:visible lg:flex"
+>
+  <ul class="flex flex-col gap-6">
+    {
+      nav.slice(1).map((navGroup) => (
+        <li>
+          <h3 class="px-2 text-sm text-muted-foreground">{navGroup.label}</h3>
+          <ul class="mt-1 flex flex-col gap-1">
+            {navGroup.items.map((navItem) => (
+              <a
+                href={navItem.href}
+                class="h-auto rounded-base bg-transparent px-2 py-0.5 text-sm text-foreground transition-colors duration-75 hover:bg-secondary-background/50 data-[current=true]:bg-secondary-background/50 data-[current=true]:text-foreground"
+                data-current={pathname === navItem.href}
+              >
+                {navItem.label}
+              </a>
+            ))}
+          </ul>
+        </li>
+      ))
+    }
+  </ul>
+</aside>
