--- a/src/layout/base-layout.astro
+++ b/src/layout/base-layout.astro
@@ -17,7 +17,7 @@ import "~/styles/global.css";
   <body data-overlayscrollbars-initialize>
     <Header />
     <slot />
-    <Sonner client:load />
+    <Sonner position="top-center" client:load />
   </body>
 </html>
 <script>
