Sidebar and Site search

--- a/src/components/docs/toc.astro
+++ b/src/components/docs/toc.astro
@@ -9,7 +9,7 @@ const { headings } = Astro.props;
 ---
 
 <aside
-  class="invisible sticky top-[calc(var(--header-height)+4px)] z-30 no-scrollbar hidden h-[calc(100svh-var(--header-height)-2reml)] w-80 flex-col overflow-y-scroll bg-transparent px-4 pt-8 xl:visible xl:flex"
+  class="invisible sticky top-[calc(var(--header-height)+4px)] z-30 no-scrollbar hidden h-[calc(100svh-var(--header-height)-2rem)] w-80 flex-col overflow-y-scroll border-l-4 border-border bg-transparent px-4 pt-8 xl:visible xl:flex"
 >
   <p class="text-muted-foreground">On This Page</p>
   <ul class="mt-4 flex flex-col gap-1">
