--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from "~/layout/base-layout.astro";
+import Layout from "~/layout/layout.astro";
 import { Button } from "~/components/ui/button";
 ---
 
-<BaseLayout>
+<Layout>
   <div class="mt-32 grid place-content-center">
     <div>
       <div
@@ -26,4 +26,4 @@ import { Button } from "~/components/ui/button";
       </div>
     </div>
   </div>
-</BaseLayout>
+</Layout>
