--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -1,4 +1,5 @@
 ---
+import Search from "./search.astro";
 import Logo from "~/assets/logo.svg";
 import { Button } from "~/components/ui/button";
 import { nav } from "~/lib/nav";
@@ -35,7 +36,8 @@ import ThemeToggle from "./mode-toggle";
         <MobileNav client:load navGroups={nav} />
       </div>
     </div>
-    <div>
+    <div class="flex gap-2">
+      <Search />
       <ThemeToggle client:load />
     </div>
   </div>
