--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,6 +38,15 @@
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
 
+  --sidebar: oklch(0.88 0.06 254);
+  --sidebar-foreground: oklch(0.28 0.09 268);
+  --sidebar-primary: oklch(0.72 0.19 260);
+  --sidebar-primary-foreground: oklch(0.28 0.09 268);
+  --sidebar-accent: oklch(0.93 0.03 256);
+  --sidebar-accent-foreground: oklch(0.28 0.09 268);
+  --sidebar-border: oklch(0.28 0.09 268);
+  --sidebar-ring: oklch(0.28 0.09 268);
+
   --code-background: #eff1f5;
   --code-frame: #dce0e8;
 
@@ -74,6 +83,15 @@
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
 
+  --sidebar: oklch(0.38 0.14 266);
+  --sidebar-foreground: oklch(0.97 0.01 255);
+  --sidebar-primary: oklch(0.62 0.19 260);
+  --sidebar-primary-foreground: oklch(0.28 0.09 268);
+  --sidebar-accent: oklch(0.28 0.09 268);
+  --sidebar-accent-foreground: oklch(0.97 0.01 255);
+  --sidebar-border: oklch(0.97 0.01 255);
+  --sidebar-ring: oklch(0.97 0.01 255);
+
   --code-background: #24273a;
   --code-frame: #181926;
 }
@@ -103,6 +121,15 @@
   --color-warning-foreground: var(--warning-foreground);
   --color-error: var(--error);
   --color-error-foreground: var(--error-foreground);
+
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 
   --color-code-background: var(--code-background);
   --color-code-frame: var(--code-frame);
