--- a/src/layout/base-layout.astro
+++ b/src/layout/base-layout.astro
@@ -10,6 +10,45 @@ import "~/styles/global.css";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Solid UI Neobrutalism</title>
+    <script is:inline>
+      const getThemePreference = () => {
+        if (
+          typeof localStorage !== "undefined" &&
+          localStorage.getItem("theme")
+        ) {
+          return localStorage.getItem("theme");
+        }
+        return window.matchMedia("(prefers-color-scheme: dark)").matches
+          ? "dark"
+          : "light";
+      };
+
+      function setDarkMode(document) {
+        const isDark = getThemePreference() === "dark";
+        document.documentElement.classList[isDark ? "add" : "remove"]("dark");
+        document.documentElement.dataset["theme"] = isDark
+          ? "catppuccin-macchiato"
+          : "catppuccin-latte";
+      }
+
+      setDarkMode(document);
+
+      if (typeof localStorage !== "undefined") {
+        const observer = new MutationObserver(() => {
+          const isDark = document.documentElement.classList.contains("dark");
+          localStorage.setItem("theme", isDark ? "dark" : "light");
+        });
+        observer.observe(document.documentElement, {
+          attributes: true,
+          attributeFilter: ["class"],
+        });
+      }
+
+      document.addEventListener("astro:before-swap", (e) => {
+        // setDarkMode(document);
+        setDarkMode(e.newDocument);
+      });
+    </script>
   </head>
   <body data-overlayscrollbars-initialize>
     <slot />
