--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import { Button } from "~/components/ui/button";
   <div class="mt-32 grid place-content-center">
     <div>
       <div
-        class="container flex flex-col items-center gap-2 py-8 text-center md:py-16 lg:py-20 xl:gap-4"
+        class="container flex flex-col items-center gap-2 px-4 py-8 text-center md:py-16 lg:py-20 xl:gap-4"
       >
         <h1
           class="leading-tighter max-w-2xl text-4xl font-semibold tracking-tight text-balance text-primary lg:leading-[1.1] lg:font-semibold xl:text-5xl xl:tracking-tighter"
